# CS4240_Proj2

./: README.md  design.txt  run.sh
materials/: README(fix this).md  README-oneoffs.md  README.md
materials/cpp/: CMakeLists.txt  Makefile  README_INSTRUCTION_SELECTOR.md  README_UNIT_TESTS.md  build.sh  run.sh
materials/cpp/examples/: cfg_demo.cpp  demo.cpp
materials/cpp/include/: alloc_greedy.hpp  alloc_naive.hpp  arithmetic_selector.hpp  branch_selector.hpp  call_selector.hpp  dead_code.hpp  emit_helpers.hpp  frame_builder.hpp  instruction_selector.hpp  ir.hpp  ir_optimizer.hpp  memory_selector.hpp  mips_instructions.hpp  reaching_def.hpp  register_manager.hpp
materials/cpp/src/: alloc_greedy.cpp  alloc_naive.cpp  arithmetic_selector.cpp  branch_selector.cpp  call_selector.cpp  cfg_test.cpp  dead_code.cpp  emit_helpers.cpp  frame_builder.cpp  instruction_selector.cpp  ir_cfg.cpp  ir_core.cpp  ir_interpreter.cpp  ir_operands.cpp  ir_optimizer.cpp  ir_reader.cpp  ir_to_mips.cpp  ir_types.cpp  memory_selector.cpp  mips_instructions.cpp  reaching_def.cpp  register_manager.cpp
materials/mips-interpreter/: build_all_public.sh  test_all_public.ps1  test_prime.ps1  test_quicksort.ps1  test_suite.ps1
materials/mips-interpreter/src/main/java/mips/: MIPSInterpreter.java
